--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
   },
   "dependencies": {
     "@vueuse/core": "^10.11.1",
+    "artplayer": "^5.2.3",
     "axios": "1.8.2",
+    "flv.js": "^1.6.2",
+    "hls.js": "^1.6.5",
     "less": "^4.2.1",
     "less-loader": "^11.1.4",
     "pinia": "^2.3.0",
     "radash": "^12.1.0",
     "tdesign-icons-vue-next": "^0.3.6",
-    "tdesign-vue-next": "^1.11.5",
+    "tdesign-vue-next": "1.13.2",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
