--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@vueuse/core": "^10.11.1",
+    "@vueuse/integrations": "^13.5.0",
     "artplayer": "^5.2.3",
     "axios": "1.8.2",
     "flv.js": "^1.6.2",
+    "fuse.js": "^7.1.0",
     "hls.js": "^1.6.5",
     "less": "^4.2.1",
     "less-loader": "^11.1.4",
