--- a/src-utools/package.json
+++ b/src-utools/package.json
@@ -6,7 +6,7 @@
   "author": "",
   "license": "MIT",
   "type": "commonjs",
-  "dependencies": {},
-  "devDependencies": {
+  "dependencies": {
+    "axios": "^1.10.0"
   }
 }
