--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "tdesign-icons-vue-next": "^0.3.6",
     "tdesign-vue-next": "1.13.2",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "webdav": "^5.8.0"
   },
   "devDependencies": {
     "@types/node": "^20.17.10",
