--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@vueuse/integrations": "^13.5.0",
     "artplayer": "^5.2.3",
     "axios": "1.8.2",
+    "dayjs": "^1.11.13",
     "flv.js": "^1.6.2",
     "fuse.js": "^7.1.0",
     "hls.js": "^1.6.5",
