feat(proxy): 添加HTTP代理功能并集成日志插件
- 新增HTTP代理路由和API，用于处理前端HTTP请求
- 集成@rasla/logify日志插件到主应用
- 修改豆瓣API使用代理服务，添加User-Agent头

--- a/src-server/package.json
+++ b/src-server/package.json
@@ -7,6 +7,7 @@
     "pglite": "bun run src/postgre-server.ts"
   },
   "dependencies": {
+    "@rasla/logify": "^5.0.0",
     "db0": "^0.3.2",
     "elysia": "latest",
     "radash": "^12.1.1",
