feat: 添加Swagger文档支持和静态文件服务
添加@elysiajs/swagger和@elysiajs/static依赖
为所有API路由添加Swagger文档注释
配置静态文件服务和Swagger UI

--- a/src-server/package.json
+++ b/src-server/package.json
@@ -7,6 +7,8 @@
     "pglite": "bun run src/postgre-server.ts"
   },
   "dependencies": {
+    "@elysiajs/static": "^1.3.0",
+    "@elysiajs/swagger": "^1.3.1",
     "@rasla/logify": "^5.0.0",
     "db0": "^0.3.2",
     "elysia": "latest",
