--- a/src-server/package.json
+++ b/src-server/package.json
@@ -2,9 +2,8 @@
   "name": "video-box-server",
   "version": "1.0.0",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "bun run --watch src/index.ts",
-    "pglite": "bun run src/postgre-server.ts"
+    "build": "bun build --compile --minify-whitespace --minify-syntax --target bun --outfile server ./src/index.ts"
   },
   "dependencies": {
     "@elysiajs/static": "^1.3.0",
