feat(auth): 实现用户认证系统
- 添加JWT认证中间件及登录路由
- 创建用户存储和认证API
- 实现登录页面和登出功能
- 添加认证错误处理及路由保护
- 更新Dockerfile添加认证环境变量

--- a/src-server/Dockerfile
+++ b/src-server/Dockerfile
@@ -29,11 +29,12 @@ COPY ./public ./public
 COPY ./migrations ./migrations
 
 ENV NODE_ENV=production
+ENV JWT_SECRET=123456
+ENV USERNAME=admin
+ENV PASSWORD=123456
 
 VOLUME /app/video-box/data
 VOLUME /app/video-box/files
 EXPOSE 52411
-
-ENV NODE_ENV=production
 
 CMD ["./runtime/server"]
