--- a/src-server/package.json
+++ b/src-server/package.json
@@ -6,6 +6,7 @@
     "build": "bun build --compile --minify-whitespace --minify-syntax --target bun --outfile server ./src/index.ts"
   },
   "dependencies": {
+    "@elysiajs/cron": "^1.3.0",
     "@elysiajs/jwt": "^1.3.2",
     "@elysiajs/static": "^1.3.0",
     "@elysiajs/swagger": "^1.3.1",
