--- a/src-server/package.json
+++ b/src-server/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "dev": "bun run --watch src/index.ts",
-    "build": "bun build --compile --minify-whitespace --minify-syntax --target bun --outfile server ./src/index.ts"
+    "build": "bun build --compile --minify-whitespace --minify-syntax --target bun --outfile dist/server ./src/index.ts"
   },
   "dependencies": {
     "@elysiajs/cron": "^1.3.0",
@@ -11,8 +11,10 @@
     "@elysiajs/static": "^1.3.0",
     "@elysiajs/swagger": "^1.3.1",
     "@rasla/logify": "^5.0.0",
+    "axios": "^1.11.0",
     "db0": "^0.3.2",
     "elysia": "latest",
+    "fast-xml-parser": "^5.2.5",
     "radash": "^12.1.1",
     "unstorage": "^1.16.1"
   },
