--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,9 @@
 {
   "compilerOptions": {
-    "target": "ESNext",
+    "target": "ES2020",
     "useDefineForClassFields": true,
-    "module": "ESNext",
-    "moduleResolution": "nodenext",
+    "module": "Node16",
+    "moduleResolution": "node16",
     "allowImportingTsExtensions": true,
     "strict": true,
     "jsx": "preserve",
@@ -23,9 +23,6 @@
       ]
     },
     "noEmit": true,
-    "types": [
-      "utools-api-types"
-    ]
   },
   "include": [
     "src/**/*.ts",
