refactor(server): 重构服务端代码
- 移除 Snowflake 相关代码
- 新增 BaseMapper 和 QueryWrapper 类
- 创建 FolderWebDao 和 SourceWebDao 类
- 更新相关路由和控制器
- 调整数据库操作方式

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,9 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
+    "target": "ES6",
     "useDefineForClassFields": true,
-    "module": "Node16",
-    "moduleResolution": "node16",
+    "module": "ESNext",
+    "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
     "strict": true,
     "jsx": "preserve",
@@ -22,7 +22,7 @@
         "./src/*"
       ]
     },
-    "noEmit": true,
+    "noEmit": true
   },
   "include": [
     "src/**/*.ts",
