--- a/src-server/package.json
+++ b/src-server/package.json
@@ -1,6 +1,7 @@
 {
   "name": "video-box-server",
   "version": "1.0.0",
+  "type": "module",
   "scripts": {
     "dev": "bun run --watch src/index.ts",
     "build": "bun build --compile --minify-whitespace --minify-syntax --target bun --outfile dist/server ./src/index.ts"
