feat(disk): 重构磁盘插件架构
- 重构了磁盘插件的接口和实现，提高了可扩展性和可维护性
- 新增了 AListV3 和 WebDAV 磁盘插件的实现
-优化了磁盘插件的配置和属性结构
- 添加了磁盘插件的路由和接口

--- a/src-server/package.json
+++ b/src-server/package.json
@@ -17,7 +17,8 @@
     "elysia": "latest",
     "fast-xml-parser": "^5.2.5",
     "radash": "^12.1.1",
-    "unstorage": "^1.16.1"
+    "unstorage": "^1.16.1",
+    "webdav": "^5.8.0"
   },
   "devDependencies": {
     "bun-types": "latest"
