ci: 更新云原生构建配置
- 修改 Docker 镜像构建命令，添加仓库路径
- 增加镜像推送到制品库的步骤

--- a/.cnb.yml
+++ b/.cnb.yml
@@ -11,4 +11,6 @@ main:
         - name: 构建前端项目
           script: bun run build
         - name: 构建镜像
-          script: docker build -t ${CNB_REPO_SLUG_LOWERCASE}:${CNB_COMMIT} .
+          script: docker build -t ${CNB_DOCKER_REGISTRY}/${CNB_REPO_SLUG_LOWERCASE}:latest .
+        - name: 推送到制品库
+          script: docker push ${CNB_DOCKER_REGISTRY}/${CNB_REPO_SLUG_LOWERCASE}:latest
