--- a/package.json
+++ b/package.json
@@ -13,15 +13,18 @@
     "@imengyu/vue3-context-menu": "^1.5.1",
     "@vueuse/core": "^10.11.1",
     "@vueuse/integrations": "^13.5.0",
+    "aplayer": "^1.10.1",
     "artplayer": "^5.2.3",
     "axios": "1.8.2",
     "dayjs": "^1.11.13",
     "flv.js": "^1.6.2",
     "fuse.js": "^7.1.0",
+    "highlight.js": "^11.11.1",
     "hls.js": "^1.6.5",
     "less": "^4.2.1",
     "less-loader": "^11.1.4",
     "macy": "^2.5.1",
+    "md-editor-v3": "^5.8.4",
     "pinia": "^2.3.0",
     "radash": "^12.1.0",
     "sortablejs": "^1",
