--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "sortablejs": "^1",
     "tdesign-icons-vue-next": "^0.3.6",
     "tdesign-vue-next": "1.13.2",
+    "vite-svg-loader": "^5.1.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
     "webdav": "^5.8.0"
