--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "aplayer": "^1.10.1",
     "artplayer": "^5.2.3",
     "axios": "1.8.2",
+    "crypto-js": "^4.2.0",
     "dayjs": "^1.11.13",
     "flv.js": "^1.6.2",
     "fuse.js": "^7.1.0",
@@ -36,6 +37,7 @@
     "webdav": "^5.8.0"
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.2.2",
     "@types/node": "^20.17.10",
     "@vitejs/plugin-vue": "^4.6.2",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
