--- a/src-server/package.json
+++ b/src-server/package.json
@@ -13,6 +13,7 @@
     "@elysiajs/swagger": "^1.3.1",
     "@rasla/logify": "^5.0.0",
     "axios": "^1.11.0",
+    "axios-retry": "^4.5.0",
     "dayjs": "^1.11.13",
     "db0": "^0.3.2",
     "elysia": "latest",
