ci: 更新 Docker 镜像版本并调整构建配置
- 将 master 分支的 tag_push配置更改为 pro 分支的 push 配置
- 更新 Docker 镜像版本从 1.2.15 到1.2.19
- 保留了 volumes 和 stages 配置项

--- a/.cnb.yml
+++ b/.cnb.yml
@@ -1,8 +1,8 @@
-master:
-  tag_push:
+pro:
+  push:
     - name: build_docker
       docker:
-        image: oven/bun:1.2.15
+        image: oven/bun:1.2.19
         volumes:
           - ~/.bun/install/cache:cow
       stages:
