build: 修改 Bun 缓存目录路径
- 将 Bun 缓存目录从 ~/.bun/install/cache 修改为 /root/.bun/install/cache
- 这个修改解决了在 CI 环境下由于权限问题导致的 Bun 安装依赖失败的问题

--- a/.cnb.yml
+++ b/.cnb.yml
@@ -4,7 +4,7 @@ pro:
       docker:
         image: oven/bun:1.2.19
         volumes:
-          - ~/.bun/install/cache:cow
+          - /root/.bun/install/cache:cow
       stages:
         - name: 安装依赖
           script: bun install
