feat(subscribe): 添加订阅功能
- 新增订阅相关的数据库表和 DAO 类
- 实现了自定义、RSS 和 RSS Hub 三种订阅驱动
- 添加了订阅缓存任务和相关路由
- 集成了 HTML 转 Markdown 功能

--- a/src-server/package.json
+++ b/src-server/package.json
@@ -14,11 +14,14 @@
     "@rasla/logify": "^5.0.0",
     "axios": "^1.11.0",
     "axios-retry": "^4.5.0",
+    "cheerio": "^1.1.2",
     "dayjs": "^1.11.13",
     "db0": "^0.3.2",
     "elysia": "latest",
     "fast-xml-parser": "^5.2.5",
+    "iconv-lite": "^0.6.3",
     "radash": "^12.1.1",
+    "rss-parser": "^3.13.0",
     "unstorage": "^1.16.1",
     "webdav": "^5.8.0"
   },
