--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "crypto-js": "^4.2.0",
     "dayjs": "^1.11.13",
     "flv.js": "^1.6.2",
-    "fuse.js": "^7.1.0",
+    "fuse.js": "6",
     "highlight.js": "^11.11.1",
     "hls.js": "^1.6.5",
     "less": "^4.2.1",
