--- a/src-server/package.json
+++ b/src-server/package.json
@@ -20,6 +20,7 @@
     "elysia": "latest",
     "fast-xml-parser": "^5.2.5",
     "iconv-lite": "^0.6.3",
+    "openai": "^5.12.2",
     "radash": "^12.1.1",
     "rss-parser": "^3.13.0",
     "unstorage": "^1.16.1",
