feat(tool): 添加 AI 工具聊天功能
- 新增 AI工具聊天相关接口和页面- 实现 AI 工具对话列表、消息列表、消息发送等功能
- 添加 AI 工具相关数据库表和 DAO
- 优化路由配置，支持 AI 工具相关页面

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "less": "^4.2.1",
     "less-loader": "^11.1.4",
     "macy": "^2.5.1",
+    "marked": "^16.1.2",
     "md-editor-v3": "^5.8.4",
     "pinia": "^2.3.0",
     "radash": "^12.1.0",
