--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "macy": "^2.5.1",
     "marked": "^16.1.2",
     "md-editor-v3": "^5.8.4",
+    "monaco-editor": "^0.52.2",
     "pinia": "^2.3.0",
     "radash": "^12.1.0",
     "sortablejs": "^1",
@@ -47,6 +48,7 @@
     "unplugin-auto-import": "^0.18.6",
     "unplugin-vue-components": "^0.27.5",
     "vite": "6.2.6",
+    "vite-plugin-monaco-editor": "^1.1.0",
     "vue-tsc": "^2.2.0"
   }
 }
