--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@imengyu/vue3-context-menu": "^1.5.1",
+    "@monaco-editor/loader": "^1.5.0",
     "@vueuse/core": "^10.11.1",
     "@vueuse/integrations": "^13.5.0",
     "aplayer": "^1.10.1",
@@ -33,6 +34,7 @@
     "sortablejs": "^1",
     "tdesign-icons-vue-next": "^0.3.6",
     "tdesign-vue-next": "1.13.2",
+    "universal-cookie": "^7",
     "vite-svg-loader": "^5.1.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
