--- a/.cnb.yml
+++ b/.cnb.yml
@@ -6,10 +6,10 @@ pro:
         volumes:
           - /root/.bun/install/cache:cow
       stages:
-        - name: 安装依赖
-          script: bun install
         - name: 构建前端项目
-          script: bun run build
+          script:
+            - bun install
+            - bun run build
         - name: 构建镜像
           script: docker build -t ${CNB_DOCKER_REGISTRY}/${CNB_REPO_SLUG_LOWERCASE}:latest .
         - name: 推送到制品库
