refactor: 重构项目并更新类型定义
- 更新 .cnb.yml 文件，添加构建前端项目时的调试命令
- 修改 components.d.ts 文件，移除未使用的组件类型定义
- 更新 tsconfig.json，调整 baseUrl 和 paths 配置

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,10 +16,10 @@
       "DOM"
     ],
     "skipLibCheck": true,
-    "baseUrl": "./",
+    "baseUrl": ".",
     "paths": {
       "@/*": [
-        "./src/*"
+        "src/*"
       ]
     },
     "noEmit": true
