--- a/.cnb.yml
+++ b/.cnb.yml
@@ -9,6 +9,8 @@ pro:
         - name: 构建前端项目
           script:
             - bun install
+            - pwd
+            - ls -a
             - bun run build
         - name: 构建镜像
           script: docker build -t ${CNB_DOCKER_REGISTRY}/${CNB_REPO_SLUG_LOWERCASE}:latest .
