fix: 修改文件名大小写

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,6 +32,9 @@
     "auto-imports.d.ts",
     "components.d.ts"
   ],
+  "exclude": [
+    "src-server"
+  ],
   "references": [
     {
       "path": "./tsconfig.node.json"
