--- a/.cnb.yml
+++ b/.cnb.yml
@@ -1,15 +1,17 @@
 pro:
   push:
     - name: build_docker
+      services:
+        - docker
       docker:
         image: oven/bun:1.2.19
         volumes:
           - /root/.bun/install/cache:cow
       stages:
+        - name: 安装前端依赖
+          script: bun install
         - name: 构建前端项目
-          script:
-            - bun install
-            - bunx vite build
+          script: bunx vite build
         - name: 构建镜像
           script: docker build -t ${CNB_DOCKER_REGISTRY}/${CNB_REPO_SLUG_LOWERCASE}:latest .
         - name: 推送到制品库
